Updated gitignore and added raw readme

--- a/.gitignore
+++ b/.gitignore
@@ -230,7 +230,15 @@ fabric.properties
 
 
 ### Custom ###
+# dataset
 ASR/tidigits/
+
 ASR/.idea/
+
+# feature files
 *.pfile
+
+# model files
+*.mdl
+*.cfg
 
